manifests/deployment/dd-cyberia-development/proxy.yaml

---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: underpost.net
  namespace: default
spec:
  virtualhost:
    fqdn: underpost.net
  routes:
    - conditions:
        - prefix: /
      
      enableWebsockets: true
      services:
        - name: dd-cyberia-development-traffic-service
          port: 4005
          weight: 100
    
    - conditions:
        - prefix: /peer
      
      enableWebsockets: true
      services:
        - name: dd-cyberia-development-traffic-service
          port: 4006
          weight: 100
    
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: www.underpost.net
  namespace: default
spec:
  virtualhost:
    fqdn: www.underpost.net
  routes:
    - conditions:
        - prefix: /
      
      enableWebsockets: true
      services:
        - name: dd-cyberia-development-traffic-service
          port: 4007
          weight: 100
    
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: www.cyberiaonline.com
  namespace: default
spec:
  virtualhost:
    fqdn: www.cyberiaonline.com
  routes:
    - conditions:
        - prefix: /
      
      enableWebsockets: true
      services:
        - name: dd-cyberia-development-traffic-service
          port: 4008
          weight: 100
    
    - conditions:
        - prefix: /peer
      
      enableWebsockets: true
      services:
        - name: dd-cyberia-development-traffic-service
          port: 4009
          weight: 100
    
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: cyberiaonline.com
  namespace: default
spec:
  virtualhost:
    fqdn: cyberiaonline.com
  routes:
    - conditions:
        - prefix: /
      
      enableWebsockets: true
      services:
        - name: dd-cyberia-development-traffic-service
          port: 4010
          weight: 100
    
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: cryptokoyn.net
  namespace: default
spec:
  virtualhost:
    fqdn: cryptokoyn.net
  routes:
    - conditions:
        - prefix: /
      
      enableWebsockets: true
      services:
        - name: dd-cyberia-development-traffic-service
          port: 4011
          weight: 100
    
    - conditions:
        - prefix: /peer
      
      enableWebsockets: true
      services:
        - name: dd-cyberia-development-traffic-service
          port: 4012
          weight: 100
    
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: www.cryptokoyn.net
  namespace: default
spec:
  virtualhost:
    fqdn: www.cryptokoyn.net
  routes:
    - conditions:
        - prefix: /
      
      enableWebsockets: true
      services:
        - name: dd-cyberia-development-traffic-service
          port: 4013
          weight: 100
    
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: itemledger.com
  namespace: default
spec:
  virtualhost:
    fqdn: itemledger.com
  routes:
    - conditions:
        - prefix: /
      
      enableWebsockets: true
      services:
        - name: dd-cyberia-development-traffic-service
          port: 4014
          weight: 100
    
    - conditions:
        - prefix: /peer
      
      enableWebsockets: true
      services:
        - name: dd-cyberia-development-traffic-service
          port: 4015
          weight: 100
    
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: www.itemledger.com
  namespace: default
spec:
  virtualhost:
    fqdn: www.itemledger.com
  routes:
    - conditions:
        - prefix: /
      
      enableWebsockets: true
      services:
        - name: dd-cyberia-development-traffic-service
          port: 4016
          weight: 100
    
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: objectlayer.org
  namespace: default
spec:
  virtualhost:
    fqdn: objectlayer.org
  routes:
    - conditions:
        - prefix: /
      
      enableWebsockets: true
      services:
        - name: dd-cyberia-development-traffic-service
          port: 4017
          weight: 100
    
    - conditions:
        - prefix: /peer
      
      enableWebsockets: true
      services:
        - name: dd-cyberia-development-traffic-service
          port: 4018
          weight: 100
    
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: www.objectlayer.org
  namespace: default
spec:
  virtualhost:
    fqdn: www.objectlayer.org
  routes:
    - conditions:
        - prefix: /
      
      enableWebsockets: true
      services:
        - name: dd-cyberia-development-traffic-service
          port: 4019
          weight: 100
